Fix overlap with negative margin

--- a/src/pages/our-story.module.scss
+++ b/src/pages/our-story.module.scss
@@ -55,7 +55,7 @@ $team-margin: 1rem;
 }
 
 .joinSection > div {
-  display: block;
+  z-index: 100;
 }
 
 .joinContainer {
